# vgmstream

./: !!!files_to_change_for_metas.txt  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  COPYING  COPYING.libacm  Directory.Build.props  LICENSE  Makefile  Makefile.audacious.am  Makefile.autotools.am  Makefile.unix.am  README.md  SECURITY.md  appveyor.yml  bootstrap  build.bat  build.ps1  configure.ac  configure.in  init-build.bat  make-build-cmake.sh  make-build.sh  msvc-build-clean.bat  msvc-build-init.bat  msvc-build-package.bat  msvc-build.bat  msvc-build.ps1  package.bat  readme.txt  streamfile.c  streamtypes.h  unbootstrap  util.c  version-get.sh  version-make.bat  version-make.sh  version.bat  version.h  (+7 more)
audacious/: CMakeLists.txt  Makefile.audacious.am  Makefile.autotools.am  plugin.cc  plugin.h  vfs.cc  vfs.h
cli/: CMakeLists.txt  Makefile  Makefile.autotools.am  api_example.c  test.c  test.vcproj  test.vcxproj  test.vcxproj.filters  txtp_maker.py  txtp_segmenter.py  vgmstream123.c  vgmstream_cli.c  vgmstream_cli.h  vgmstream_cli.vcproj  vgmstream_cli.vcxproj  vgmstream_cli.vcxproj.filters  vgmstream_cli_utils.c  vjson.h  vrts.bat  wav_utils.c  wav_utils.h  windows_utils.c  windows_utils.h
cli/tools/: txtm_finder.py  txtm_maker.py  txtm_segmenter.py  txtp_dumper.py  txtp_maker.py  txtp_segmenter.py  vrts.py
ext_libs/libg719_decode/: CMakeLists.txt
ext_libs/maiatrac3plus/: CMakeLists.txt  maiatrac3plus.h
fb2k/: CMakeLists.txt  foo_filetypes.h  foo_input_vgmstream.aps  foo_input_vgmstream.rc  foo_input_vgmstream.vcproj  foo_input_vgmstream.vcxproj  foo_input_vgmstream.vcxproj.filters  foo_prefs.cpp  foo_prefs.h  foo_streamfile.cpp  foo_vgmstream.cpp  foo_vgmstream.h  foostream.cpp  genversion.bat  in_vgmstream.cpp  repl.bat  resource.h  version.bat  version.h
src/: CMakeLists.txt  Makefile  Makefile.audacious.am  Makefile.autotools.am  Makefile.unix.am  api.h  api_decode.h  api_helpers.h  api_main.c  api_main.h  api_streamfile.h  api_tags.h  api_version.h  decode.c  decode.h  formats.c  formats.h  header.c  header.h  info.c  libvgmstream.h  libvgmstream.vcproj  libvgmstream.vcxproj  libvgmstream.vcxproj.filters  libvgmstream_streamfile.h  mixing.c  mixing.h  player.c  plugins.c  plugins.h  render.c  render.h  seek.c  stack_alloc.h  streamfile.c  streamfile.h  streamtypes.h  util.c  util.h  vgmstream-config.cmake.in  (+5 more)
src/base/: api_decode_base.c  api_decode_open.c  api_decode_play.c  api_helpers.c  api_internal.h  api_libsf.c  api_libsf_cache.c  api_tags.c  codec_info.c  codec_info.h  config.c  decode.c  decode.h  decode_state.h  info.c  info.h  mixer.c  mixer.h  mixer_ops_common.c  mixer_ops_fade.c  mixer_priv.h  mixing.c  mixing.h  mixing_commands.c  mixing_fades.h  mixing_macros.c  mixing_ops_common.c  mixing_ops_fade.c  mixing_priv.h  play_config.c  play_config.h  play_state.c  play_state.h  plugins.c  plugins.h  rc.h  render.c  render.h  resampler.c  resampler.h  (+16 more)
src/coding/: Makefile.audacious.am  Makefile.autotools.am  Makefile.unix.am  SASSC_decoder.c  aac_raw_decoder.c  acm_decoder.c  acm_decoder.h  acm_decoder_decode.c  acm_decoder_libacm.h  acm_decoder_util.c  adx_decoder.c  adx_decoder.h  afc_decoder.c  aica_decoder.c  asf_decoder.c  at3_decoder.c  at3plus_decoder.c  at3plus_decoder.h  atrac9_decoder.c  binka_decoder.c  celt_fsb_decoder.c  circus_decoder.c  circus_decoder_lib.c  circus_decoder_lib.h  circus_decoder_lib_data.h  circus_decoder_lzxpcm.h  circus_decoder_miniz.c  circus_decoder_miniz.h  coding.h  coding_utils.c  coding_utils_samples.h  compresswave_decode_lib.c  compresswave_decode_lib.h  compresswave_decoder.c  compresswave_decoder_lib.c  compresswave_decoder_lib.h  cwv_decoder.c  derf_decoder.c  df_decoder.c  dpcm_kcej_decoder.c  (+117 more)
src/fmt/: adx.c  adx.h  adx_decoder.c  adx_header.c  brstm.c  brstm.h  gcdsp.h  gcdsp_decoder.c  interleave.c  nolayout.c
src/layout/: Makefile.audacious.am  Makefile.autotools.am  Makefile.unix.am  aax_layout.c  aix_layout.c  ast_blocked.c  ast_blocked.h  bdsp_blocked.c  blocked.c  blocked.h  blocked_adm.c  blocked_ast.c  blocked_awc.c  blocked_bdsp.c  blocked_caf.c  blocked_cf_df.c  blocked_dec.c  blocked_ea_1snh.c  blocked_ea_schl.c  blocked_ea_sns.c  blocked_ea_swvr.c  blocked_ea_wve_ad10.c  blocked_ea_wve_au00.c  blocked_emff.c  blocked_filp.c  blocked_gsb.c  blocked_gsnd.c  blocked_h4m.c  blocked_halpst.c  blocked_hvqm4.c  blocked_hwas.c  blocked_ivaud.c  blocked_matx.c  blocked_mul.c  blocked_mxch.c  blocked_ps2_iab.c  blocked_ps2_strlr.c  blocked_rage_aud.c  blocked_rws.c  blocked_snd_gcw_str.c  (+59 more)
src/meta/: 208.c  2dx.c  2dx9.c  2msf.c  2pfs.c  9tav.c  9tav_streamfile.h  Cstr.c  Cstr.h  Makefile.audacious.am  Makefile.autotools.am  Makefile.unix.am  _test.c  a2m.c  aac_triace.c  aax.c  aax_streamfile.h  aax_utf.h  acb.c  acb_utf.h  acm.c  acx.c  adm.c  adm3.c  adp_bos.c  adp_konami.c  adp_ongakukan.c  adp_qd.c  adp_wildfire.c  adpcm_capcom.c  ads.c  ads_midway.c  adx.c  adx_header.c  adx_header.h  adx_keys.h  adx_monster.c  afc.c  afc_header.c  afc_header.h  (+759 more)
src/util/: bitstream_lsb.h  bitstream_msb.h  channel_mappings.h  chunks.c  chunks.h  cipher_blowfish.c  cipher_blowfish.h  cipher_xxtea.c  cipher_xxtea.h  companion_files.c  companion_files.h  cri_keys.c  cri_keys.h  cri_utf.c  cri_utf.h  endianness.h  io_callback.h  io_callback_sf.c  io_callback_sf.h  layout_utils.c  layout_utils.h  log.c  log.h  m2_psb.c  m2_psb.h  meta_utils.c  meta_utils.h  miniz.c  miniz.h  paths.c  paths.h  reader.c  reader_get.h  reader_get_nibbles.h  reader_helper.h  reader_put.c  reader_put.h  reader_sf.h  reader_text.c  reader_text.h  (+12 more)
winamp/: CMakeLists.txt  Makefile  in2.h  in_config.c  in_log.c  in_streamfile.c  in_utils.c  in_vgmstream.c  in_vgmstream.h  in_vgmstream.vcproj  in_vgmstream.vcxproj  in_vgmstream.vcxproj.filters  out.h  resource.h  resource.rc  wa_ipc.h
winamp/sdk/: in2.h  in2_extra.h  ipc_pe.h  out.h  wa_ipc.h
xmplay/: CMakeLists.txt  Makefile  xmp-vgmstream.vcxproj  xmp-vgmstream.vcxproj.filters  xmp_streamfile.c  xmp_utils.c  xmp_vgmstream.c  xmp_vgmstream.h  xmpfunc.h  xmpin.def  xmpin.h
(+240 files in other folders)
