dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.53)
AC_INIT(audacious-vgmstream,1.0.0)
AM_INIT_AUTOMAKE(audacious-vgmstream, 1.0.0)
AM_CONFIG_HEADER(unix/config.h)
AM_DISABLE_STATIC

AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

AC_PATH_X
AC_PATH_XTRA

PKG_CHECK_MODULES(AUDACIOUS, [audacious >= 1.4.0],,
        [AC_MSG_ERROR([Cannot find Audacious, have you installed audacious yet?])]
)

PKG_CHECK_MODULES(VORBISFILE, [vorbisfile],,
        [AC_MSG_ERROR([Cannot find libvorbisfile])]
)

PKG_CHECK_MODULES(MPG123, [libmpg123],,
        [AC_MSG_ERROR([Cannot find libmpg123])]
)

dnl Check for GTK/GLib/GThread/Pango

PKG_CHECK_MODULES(GTK, [glib-2.0 >= 2.6.0 gtk+-2.0 >= 2.6.0 gthread-2.0 pango],
    , [AC_MSG_ERROR([Cannot find glib2/gtk2/pango])]
)

CFLAGS="$CFLAGS $AUDACIOUS_CFLAGS"
LIBS="$LIBS $AUDACIOUS_LIBS $GTK_LIBS $VORBISFILE_LIBS $MPG123_LIBS"

plugindir=`pkg-config audacious --variable=plugin_dir`
AC_SUBST(plugindir)

INPUT_PLUGIN_DIR="Input"
AC_SUBST(INPUT_PLUGIN_DIR)

#AC_CHECK_HEADERS(regex.h,,AC_MSG_ERROR(regex.h missing))
#AC_CHECK_FUNCS(regcomp regexec regfree)

AC_PATH_X
AC_PATH_XTRA

AC_OUTPUT([
  Makefile.unix
  src/Makefile.unix
  src/coding/Makefile.unix
  src/layout/Makefile.unix
  src/meta/Makefile.unix
  unix/Makefile.unix
])
